    variable Qt5_DIR to point to the path to the directory containing the file
    Qt5Config.cmake created by your Qt5 installation. If you are using the open
    source edition it should be /path-to/qt-everywhere-opensource-src-
    <version>/qtbase/lib/cmake/Qt5.

  - The code of the 3D demos now use modern OpenGL, with shaders, instead of
    the fixed pipeline API of OpenGL-1.


* General

  - Support for unordered sets and maps of the stdlib and of boost for handle
    and index classes.


* L Infinity Segment Delaunay Graphs (new package)

  - The package provides the geometric traits for constructing the segment
    Delaunay graph in the max-norm (L Infinity). The traits also contain
    methods to draw the edges of the dual of the segment Delaunay graph in the
    max-norm i.e., the segment Voronoi diagram in the max-norm. The algorithm
    and traits rely on the segment Delaunay graph algorithm and traits under
    the Euclidean distance. The segment Voronoi diagram in the max-norm has
    applications in VLSI CAD.


* Advancing Front Surface Reconstruction (new package)

  - This package provides a greedy algorithm for surface reconstruction from an
    unorganized point set. Starting from a seed facet, a piecewise linear
    surface is grown by adding Delaunay triangles one by one. The most
    plausible triangles are added first, in a way that avoids the appearance of
    topological singularities.


* Triangulated Surface Mesh Shortest Paths (new package)

  - The package provides methods for computing shortest path on triangulated
    surface meshes. Given a set of source points on the surface, this package
    provides a data structure that can efficiently provides the shortest path
    from any point on the surface to the sources points. There is no
    restriction on the genus or the number of connnected components of the
    mesh.


* Triangulated Surface Mesh Skeletonization (new package)
