@@ -129,10 +129,12 @@ and <code>src/</code> directories).
     the path to the directory containing the file <code>Qt5Config.cmake</code> created
     by your Qt5 installation.
     If you are using the open source edition it should be
-    <code>/path-to/qt-everywhere-opensource-src-&lt;version&gt;/qtbase/lib/cmake/Qt5</code>.</li>
-
+    <code>/path-to/qt-everywhere-opensource-src-&lt;version&gt;/qtbase/lib/cmake/Qt5</code>.
+    </li>
     <li>The code of the 3D demos now use modern OpenGL, with shaders,
     instead of the fixed pipeline API of OpenGL-1.</li>
+    <li>Initial support of the Microsoft Windows Visual C++ compiler 2015
+    (VC14).</li>
   </ul>
 
   <h3>General</h3>
